--- a/travis.yml
+++ b/travis.yml
@@ -4,4 +4,4 @@ python:
 
 # command to run tests
 script:
- - python -m unittest TestTriangle.py
+ - cd triangle && python -m unittest TestTriangle.py
