--- a/travis.yml
+++ b/travis.yml
@@ -1,5 +1,5 @@
 language: python
 python:
- - "3.5"
+ - "3.9"
 script:
- - cd triangle && python -m unittest Triangle.py
+ - cd triangle && python -m unittest TestTriangle.py
